Revapi and Java 8